# heimdex-media-contracts

./: .gitignore  CHANGELOG.md  Dockerfile.test  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: release.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
src/heimdex_media_contracts/: __init__.py
src/heimdex_media_contracts/blur/: __init__.py  schemas.py
src/heimdex_media_contracts/composition/: __init__.py  _colors.py  filters.py  overlays.py  schemas.py
src/heimdex_media_contracts/exports/: __init__.py  edl.py  fcpxml.py  schemas.py
src/heimdex_media_contracts/faces/: __init__.py  sampling.py  schemas.py
src/heimdex_media_contracts/ingest/: __init__.py  schemas.py
src/heimdex_media_contracts/ocr/: __init__.py  gating.py  (+1 more)
tests/: test_composition_filters.py  test_composition_schemas.py  test_faces_sampling.py  test_schemas_roundtrip.py  test_speech_ranker.py  test_speech_tagger.py
tests/blur/: test_schemas.py
tests/composition/: conftest.py  test_filters.py  test_overlays.py  test_schemas.py
tests/exports/: test_exports.py
tests/ingest/: test_ingest_schemas.py  test_source_type.py
tests/ocr/: test_ocr_gating.py  test_ocr_schemas.py  test_scene_document_ocr_fields.py
tests/product/: test_schemas.py
tests/scenes/: test_combiner.py  test_merge.py  test_presets.py  test_schemas.py  test_splitting.py  test_visual_cuts_schema.py
tests/shorts/: test_concatenator.py  test_mode_scoring.py  test_shorts.py
tests/speech/: test_speaker_merge.py
tests/tags/: test_parser.py
(+21 files in other folders)
