[project]
name = "heimdex-media-contracts"
version = "0.2.0"
description = "Shared schemas, pure functions, and contracts for Heimdex media pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heimdex_media_contracts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
